Moved Comment submission response label

--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -55,6 +55,7 @@
 
                         </fieldset>
                     </form>
+
                 </div>
 
                 <!--<div id="annotationZoneSubmitListMovables">
@@ -62,7 +63,7 @@
                         Add Annotation Zone
                     </button>
                 </div>-->
-
+                <label id="commentSubmissionResponse"></label>
             </div>
 
             <div class="commentZoneList">
