--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -96,7 +96,7 @@
                                          post-content="comment.html"
                                          is-post-owner="comment.author==$root.user.username"
                                          show-control="true"
-                                         show-reply-button="true"
+                                         show-reply-button="false"
                                          show-delete-button="false"
                                          show-edit-button="false"
                                          author-clickable="true"
