--- a/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
@@ -5,8 +5,8 @@
     </div>
     <div class="container" ng-show="isVideoExist">
         <section>
-            <va-widget video-source="{{treeNode.resources[0].link}}"
-                       video-id="{{treeNode.resources[0]._id}}"></va-widget>
+            <va-widget video-source="{{videoFile.link}}"
+                       video-id="{{videoFile._id}}"></va-widget>
         </section>
     </div>
 </div>
