--- a/views/my-course/course-history.ejs
+++ b/views/my-course/course-history.ejs
@@ -10,27 +10,27 @@
         </ul>
         <br>
 
-        <div class="views-chart no-padding" ng-show="tab ===1">
+        <div class="pdf-read-chart no-padding" ng-show="tab ===1">
             <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="myPDFReadData"
                     chart-labels="labels">
             </canvas>
         </div>
-        <div class="following-users-chart" ng-show="tab === 2">
+        <div class="video-watched-chart" ng-show="tab === 2">
             <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="myVideoWatchedData"
                     chart-labels="labels">
             </canvas>
         </div>
-        <div class="likes-chart" ng-show="tab === 3">
+        <div class="comments-made-chart" ng-show="tab === 3">
             <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="myCommentsMadeData"
                     chart-labels="labels">
             </canvas>
         </div>
-        <div class="comments-chart" ng-show="tab === 4">
+        <div class="likes-chart" ng-show="tab === 4">
             <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="myLikesData"
                     chart-labels="labels">
             </canvas>
         </div>
-        <div class="comments-chart" ng-show="tab === 5">
+        <div class="following-courses-chart" ng-show="tab === 5">
             <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="myFollowingCoursesData"
                     chart-labels="labels">
             </canvas>
