--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -85,6 +85,7 @@
 
                     </div>
                     <div id="commentList" class="row">
+                        Search: <input id="searchInput"></input>
                         <div class="replies" ng-repeat="comment in comments" ng-cloak>
                             <div class="col-xs-1">
                                 <voting vote-type="slideComment" vote-type-id="{{comment._id}}"></voting>
