--- a/views/admin-lte/links/links.ejs
+++ b/views/admin-lte/links/links.ejs
@@ -23,7 +23,7 @@
                                 {{bookmark.link.title}}
                             </a></h4>
 
-                        <a class="btn btn-primary btn-xs open-new-tab" title="Open in a New Tab" href="{{currentLink.content}}" target="_blank">
+                        <a class="btn btn-primary btn-xs open-new-tab" title="Open in a New Tab" href="{{bookmark.link.content}}" target="_blank">
                             <i class="fa fa-external-link"></i></a>
                         <br class="clear">
                         <span class="posted-at">
