--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -86,6 +86,10 @@
                     </div>
                     <div id="commentList" class="row">
                         Search: <input id="searchInput" ng-model="rawSearchTerm"></input>
+                        <div>
+                          <label id="activeFilterLabel" ng-bind="activeFilterString"></label>
+                          <button class="btn btn-white btn-link" ng-click="removeActiveFilters();" style="color:black;">X</button>
+                        </div>
                         <div class="replies" ng-repeat="comment in comments" ng-cloak>
                             <div class="col-xs-1">
                                 <voting vote-type="slideComment" vote-type-id="{{comment._id}}"></voting>
