add toaster bower

--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -26,6 +26,7 @@
     <link rel="stylesheet" type="text/css" href="/video-annotations/styles/styles.css"/>
 
     <link rel="stylesheet" type="text/css" href="/ng-tags-input/ng-tags-input.min.css">
+    <link rel="stylesheet" type="text/css" href="/angular-toastr/angular-toastr.min.css" />
 
     <!-- Chart and related widget -->
     <link rel="stylesheet" type="text/css" href="/chartjs/angular-chart.min.css"/>
