Added remove, edit, delete buttons

--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -117,9 +117,9 @@
                                          post-content="comment.html"
                                          is-post-owner="comment.author==$root.user.username"
                                          show-control="true"
-                                         show-reply-button="false"
-                                         show-delete-button="false"
-                                         show-edit-button="false"
+                                         show-reply-button="true"
+                                         show-delete-button="true"
+                                         show-edit-button="true"
                                          author-clickable="true"
                                          author-click-action="authorLabelClick(comment.author)"
                                         ></comment>
