add toastr message to signup

--- a/views/admin-lte/login.ejs
+++ b/views/admin-lte/login.ejs
@@ -14,6 +14,9 @@
 
                     <div class="box no-border">
                         <div class="box-body no-border">
+
+                            <p class="help-block">Use your facebook account to login</p>
+
                             <facebook-button></facebook-button>
                         </div>
                     </div>
@@ -23,7 +26,7 @@
                     <div class="box no-border">
                         <div class="box-body no-border">
                             <div id="legend">
-                                <h1>Log In</h1>
+                                <h2>Log In</h2>
                             </div>
                             <% include formLogin%>
                         </div>
