--- a/views/admin-lte/discussion/addNewTopicModal.ejs
+++ b/views/admin-lte/discussion/addNewTopicModal.ejs
@@ -39,7 +39,7 @@
                                     <div class="control-group">
                                         <div class="controls" >
                                             <div id="addTopicContent" name="content" ng-model="formData.content" quill></div>
-
+{{formData}}
                                         </div>
                                     </div>
 
